# maga_task_1

./: .gitignore  CMakeLists.txt  README.md  config.json  env.sh  error.txt  exp_result  plot_template.gp  run
script/: clear_folders  run  script_basics.sh
src/: main.cpp
src/cmplx/: cmplx.cpp  cmplx.h
src/config/: config.cpp  config.h
src/general/: colors.h  const.h  general.h
src/generator/: generator.cpp  generator.h  params.h
src/modulation/: ask2.cpp  ask2.h  bfsk.cpp  bfsk.h  bpsk.cpp  bpsk.h  make_signal.h  modulation.cpp  modulation.h  params.h
src/noise/: noise.cpp  noise.h  params.h
src/plot/: params.h  plot.cpp  plot.h  plot_line.h  types.h
src/scenario/: correlation.h  experiment.h  generation.h  params.h  scenario.h
src/signal/: correlation.h  params.h  signal.h
